no flex, fixed my background alignment

--- a/TS1/TS1.css
+++ b/TS1/TS1.css
@@ -16,6 +16,7 @@
   border: 1px solid black;
   width: 160px;
   height: 160px;
+  margin-left: 20px;  
 }
 
 hr {
@@ -28,7 +29,7 @@ hr {
 .academic {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 
 .row {
@@ -37,13 +38,12 @@ hr {
 }
 
 .title {
-  width: 250px;
+  width: 500px;
   font-style: italic;
 }
 
 .colon {
   width: 100px;
-
 }
 
 .details {
@@ -61,13 +61,13 @@ ul {
 .change-color {
   background-color: rgb(134, 159, 173);
   box-shadow: 6px 6px 2px black;
-    color: white;
-    border: none;
-    height: 50px;
-    width: 105px;
-    border-radius: 3px;
-    cursor: pointer;
-    justify-content: center;
-    margin-top: 20px;
-    margin-left: 360px;
+  color: white;
+  border: none;
+  height: 50px;
+  width: 105px;
+  border-radius: 3px;
+  cursor: pointer;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 655px;
 }
